--- a/templates/base.html
+++ b/templates/base.html
@@ -1,39 +1,162 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebApp 2024</title>
+<html>
+  <head>
+    {% load static %}
+    {% load crispy_forms_tags %}
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/1c5b0553b5.js" crossorigin="anonymous"></script>
+    {% block title %}<title>Home</title>{% endblock %}
+    <link rel="shortcut icon" href="{% static 'favicon.png' %}">
     <style>
-        body { font-family: Arial, sans-serif; }
-        .container { width: 80%; margin: auto; overflow: hidden; }
-        header { background: #333; color: #fff; padding-top: 30px; min-height: 70px; border-bottom: #0779e4 3px solid; }
-        header h1 { text-align: center; }
-        nav { background: #444; color: #fff; text-align: center; padding: 5px; }
-        nav a { color: #fff; text-decoration: none; margin: 5px; padding: 5px; }
-        footer { background: #333; color: #fff; text-align: center; padding: 10px; margin-top: 20px; }
+
+@media (min-width: 1200px) {
+    .container{
+        max-width: 1280px !important;
+    }
+}
+.text-muted{
+  color: #b6bdc3 !important
+}
+.table th {
+  color: white
+}
+.table td {
+  color: white
+}
+.fa{
+  color:black !important
+}
+       .main-content {
+    padding-top: 100px; /* Adjust this value based on your navbar's height */
+  }
+  li a, .dropbtn {
+  display: inline-block;
+  color: #101161;
+  text-align: center;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.btn-success {
+background-color : #101161 !important
+
+}
+
+.card{
+
+background-color: #1B585E !important;
+width:120%;
+border-color: white !important;
+
+}
+
+.list-group-item{
+  background-color: #1B585E !important
+}
+
+
+
+.btn-success:hover{
+background-color : #0c0d49 !important
+
+}
+
+body{
+background-color:#28373f !important;
+color:#fff !important;
+}
+
+li.dropdown {
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  font-size: 16px;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.js-plotly-plot .plotly .modebar{
+display:none
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1;}
+
+.dropdown:hover .dropdown-content {
+  display: block; 
+}
     </style>
-</head>
-<body>
-<header>
-    <div class="container">
-        <h1>WebApp 2024</h1>
-    </div>
-</header>
-<nav>
-    <div class="container">
-        <a href="/">Home</a>
-        <a href="{% url 'register' %}">Register</a>
-        <a href="{% url 'login' %}">Login</a>
-    </div>
-</nav>
-<div class="container">
-    {% block content %}{% endblock %}
-</div>
-<footer>
-    <div class="container">
-        &copy; 2024 WebApp 2024. All rights reserved.
-    </div>
-</footer>
-</body>
+
+  </head>
+
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container">
+        <a class="navbar-brand m-2" href="{% url 'home' %}">
+          <img src="{% static 'logoadhd.png' %}" height="50" alt="MDB Logo" loading="lazy" style="margin-top: -1px;">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarButtonsExample" aria-controls="navbarButtonsExample" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="fas fa-bars"></i>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarButtonsExample">
+          {% if user.is_authenticated %}
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'home' %}">Home</a>
+              </li>
+            </ul>
+
+            <div class="d-flex ml-auto">
+              <li class="dropdown">
+                <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+                <a href="/profile" class="dropbtn">{{ user.first_name }} {{ user.last_name }}</a>
+                <i class="fa fa-angle-down" aria-hidden="true"></i>
+                <div class="dropdown-content">
+                  <a href="/logout">Logout</a>
+                  <a href="#">Account Balance: {{user.balance}}</a>
+                </div>
+              </li>
+            </div>
+          {% else %}
+            <div class="d-flex ml-auto">
+              <button type="button" onclick="location.href='{% url 'login' %}'" class="btn btn-link px-3 me-2">Login</button>
+              <button type="button" onclick="location.href='{% url 'register' %}'" class="btn btn-primary me-3">Sign up for free</button>
+            </div>
+          {% endif %}
+
+          
+
+        
+        </div>
+      </div>
+    </nav>
+
+    <div class="container main-content">
+      {% block content %}{% endblock %}
+  </div>
+
+    
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
+  <script src="{% static 'js/index.js' %}"></script>
+  </body>
 </html>
