--- a/templates/register/register.html
+++ b/templates/register/register.html
@@ -1,10 +1,50 @@
 {% extends "base.html" %}
 
+{% load static %}
+{% load crispy_forms_tags %}
+
+{% block title %}Register{% endblock %}
+
 {% block content %}
-<h2>Register</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Register</button>
-</form>
+<!-- Section: Design Block -->
+<section class="text-center text-lg-start">
+  <style>
+    .rounded-t-5 {
+      border-top-left-radius: 0.5rem;
+      border-top-right-radius: 0.5rem;
+    }
+
+    @media (min-width: 992px) {
+      .rounded-tr-lg-0 {
+        border-top-right-radius: 0;
+      }
+
+      .rounded-bl-lg-5 {
+        border-bottom-left-radius: 0.5rem;
+      }
+    }
+  </style>
+
+  <div class="card mb-3">
+    <div class="row g-0 d-flex align-items-center">
+      <!-- Image Column -->
+      <div class="col-lg-4 d-none d-lg-flex">
+        <img src="{% static 'signup.jpg' %}" alt="Signup visual" class="w-100 rounded-t-5 rounded-tr-lg-0 rounded-bl-lg-5" />
+      </div>
+      
+      <!-- Form Column -->
+      <div class="col-lg-8">
+        <div class="card-body py-5 px-md-5">
+          <form method="post" action="{% url 'register' %}">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="btn btn-primary btn-block mb-4">Register</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Section: Design Block -->
+
 {% endblock %}
