--- a/templates/webapps/make_payment.html
+++ b/templates/webapps/make_payment.html
@@ -1,10 +1,21 @@
 {% extends 'base.html' %}
 
+{% load static %}
+{% load crispy_forms_tags %}
+
+{% block title %}Make a Payment{% endblock %}
+
 {% block content %}
-<h2>Make a Payment</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Send Payment</button>
-</form>
+<div class="container mt-5"> <!-- Margin-top for spacing below the navbar -->
+    <div class="card">
+        <div class="card-body">
+            <h2 class="card-title">Make a Payment</h2>
+            <form method="post">
+                {% csrf_token %}
+                {{ form|crispy }} <!-- Using crispy to render the form -->
+                <button type="submit" class="btn btn-primary">Send Payment</button>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
