--- a/templates/webapps/request_payment.html
+++ b/templates/webapps/request_payment.html
@@ -1,10 +1,21 @@
 {% extends 'base.html' %}
 
+{% load static %}
+{% load crispy_forms_tags %}
+
+{% block title %}Request a Payment{% endblock %}
+
 {% block content %}
-<h2>Request a Payment</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Request Payment</button>
-</form>
+<div class="container mt-5"> <!-- Ensuring there's space below the navbar -->
+    <div class="card">
+        <div class="card-body">
+            <h2 class="card-title">Request a Payment</h2>
+            <form method="post">
+                {% csrf_token %}
+                {{ form|crispy }} <!-- Using crispy to render the form beautifully -->
+                <button type="submit" class="btn btn-primary">Request Payment</button>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
