--- a/templates/base.html
+++ b/templates/base.html
@@ -121,6 +121,15 @@ display:none
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'home' %}">Home</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'make_payment' %}">Transfer</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'request_payment' %}">Request</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'transaction_notifications' %}">Transactions</a>
+              </li>
             </ul>
 
             <div class="d-flex ml-auto">
