--- a/templates/webapps/transaction_notifications.html
+++ b/templates/webapps/transaction_notifications.html
@@ -38,7 +38,9 @@
         {% for transaction in received_transactions %}
             <li class="list-group-item">
                 {% if transaction.transaction_type == 'REQUEST' and transaction.status == 'COMPLETED' %}
-                    Payment received from {{ transaction.sender.username }}'s request: {{ user_currency_symbol }}{{ transaction.amount }}
+                    Payment received from {{ transaction.recipient.username }} by request: {{ user_currency_symbol }}{{ transaction.amount }}
+                {% elif transaction.transaction_type == 'REQUEST' and transaction.status == 'REJECTED' %}
+                    Payment rejected from {{ transaction.recipient.username }} by request: {{ user_currency_symbol }}{{ transaction.amount }}    
                 {% elif transaction.transaction_type == 'PAYMENT' %}
                     Payment received from {{ transaction.sender.username }}: {{ user_currency_symbol }}{{ transaction.amount }}
                 {% endif %}
