--- a/templates/webapps/transaction_invoice.html
+++ b/templates/webapps/transaction_invoice.html
@@ -7,8 +7,8 @@
 
 <style>
     @media print {
-        button { display: none; }  /* Hide buttons when printing */
-        nav, footer { display: none; }  /* Optionally hide navigation/footer */
+        button { display: none; }  
+        nav, footer { display: none; }  
     }
 </style>
 
