--- a/templates/register/home.html
+++ b/templates/register/home.html
@@ -30,12 +30,13 @@
                 {% if transaction.transaction_type == 'REQUEST' and transaction.recipient.username == request.user.username %}
     Request payment to {{ transaction.sender.username }}: {{ user_currency_symbol }}{{ transaction.amount }} - {{ transaction.get_status_display }}
 
+    
                 {% elif transaction.transaction_type == 'PAYMENT' and transaction.sender.username == request.user.username %}
                     Payment to {{ transaction.recipient.username }}: {{ user_currency_symbol }}{{ transaction.amount }} - {{ transaction.get_status_display }}
                 {% elif transaction.transaction_type == 'REQUEST' and transaction.sender.username == request.user.username %}
-                    Payment received from {{ transaction.recipient.username }} by request: {{ user_currency_symbol }}{{ transaction.amount }}
+                Request payment from {{ transaction.recipient.username }} : {{ user_currency_symbol }}{{ transaction.amount }} - {{ transaction.get_status_display }}
                 {% elif transaction.transaction_type == 'PAYMENT' and transaction.recipient.username == request.user.username %}
-                    Payment received from {{ transaction.sender.username }}: {{ user_currency_symbol }}{{ transaction.amount }}
+                    Payment received from {{ transaction.sender.username }}: {{ user_currency_symbol }}{{ transaction.amount }} - {{ transaction.get_status_display }}
                 {% endif %}
                 <a href="{% url 'transaction_invoice' transaction.id %}" class="btn btn-primary btn-sm float-right">View Invoice</a>
             </li>
